Updated .gitignore and removed dev_paths.txt from tracking.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+# Python cache
+*.pyc
+
+# Jupyter
 .ipynb_checkpoints/
+
+# TCGAbiolinks
 DGE_analysis/MANIFEST.txt
+
+# Developer-specific files
+dev_paths.txt
