--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,8 @@ dependencies:
   - _r-mutex=1.0.1=anacondar_1
   - attrs=19.3.0=py_0
   - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.1=py_0
   - binutils_impl_linux-64=2.34=h53a641e_7
   - binutils_linux-64=2.34=hc952b39_20
   - bioconductor-all=1.28.0=r36_0
@@ -36,8 +38,11 @@ dependencies:
   - bioconductor-genomicalignments=1.22.0=r36h516909a_0
   - bioconductor-genomicfeatures=1.38.0=r36_0
   - bioconductor-genomicranges=1.38.0=r36h516909a_0
+  - bioconductor-hdf5array=1.14.0=r36h516909a_0
   - bioconductor-iranges=2.20.0=r36h516909a_0
   - bioconductor-limma=3.42.0=r36h516909a_0
+  - bioconductor-rhdf5=2.30.0=r36he1b5a44_0
+  - bioconductor-rhdf5lib=1.8.0=r36h516909a_0
   - bioconductor-rhtslib=1.18.0=r36hdb70ac9_1
   - bioconductor-rsamtools=2.2.0=r36he1b5a44_0
   - bioconductor-rtracklayer=1.46.0=r36h516909a_0
@@ -52,13 +57,15 @@ dependencies:
   - brotlipy=0.7.0=py38h1e0a361_1000
   - bwidget=1.9.14=0
   - bzip2=1.0.8=h516909a_2
+  - c-ares=1.16.1=h516909a_0
   - ca-certificates=2020.6.20=hecda079_0
   - cairo=1.16.0=hcf35c78_1003
   - certifi=2020.6.20=py38h32f6830_0
-  - cffi=1.14.0=py38hd463f26_0
+  - cffi=1.14.1=py38h5bae8af_0
   - chardet=3.0.4=py38h32f6830_1006
+  - colormath=3.0.0=py_2
   - cryptography=3.0=py38h766eaa4_0
-  - curl=7.71.1=he644dc0_3
+  - curl=7.71.1=he644dc0_4
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
   - entrypoints=0.3=py38h32f6830_1001
@@ -93,23 +100,25 @@ dependencies:
   - jupyter_core=4.6.3=py38h32f6830_1
   - jupyterlab=2.2.0=py_0
   - jupyterlab_server=1.2.0=py_0
-  - krb5=1.17.1=hfafb76e_1
+  - krb5=1.17.1=hfafb76e_2
   - ld_impl_linux-64=2.34=h53a641e_7
   - libblas=3.8.0=17_openblas
   - libcblas=3.8.0=17_openblas
-  - libcurl=7.71.1=hcdd3856_3
+  - libcurl=7.71.1=hcdd3856_4
   - libedit=3.1.20191231=h46ee950_1
+  - libev=4.33=h516909a_0
   - libffi=3.2.1=he1b5a44_1007
-  - libgcc-ng=9.2.0=h24d8f2e_2
-  - libgfortran-ng=7.5.0=hdf63c60_6
-  - libgomp=9.2.0=h24d8f2e_2
+  - libgcc-ng=9.3.0=h24d8f2e_11
+  - libgfortran-ng=7.5.0=hdf63c60_11
+  - libgomp=9.3.0=h24d8f2e_11
   - libiconv=1.15=h516909a_1006
   - liblapack=3.8.0=17_openblas
+  - libnghttp2=1.41.0=hab1572f_1
   - libopenblas=0.3.10=pthreads_hb3c22a3_4
   - libpng=1.6.37=hed695b0_1
   - libsodium=1.0.17=h516909a_0
-  - libssh2=1.9.0=hab1572f_4
-  - libstdcxx-ng=9.2.0=hdf63c60_2
+  - libssh2=1.9.0=hab1572f_5
+  - libstdcxx-ng=9.3.0=hdf63c60_11
   - libtiff=4.1.0=hc7e4089_6
   - libuuid=2.32.1=h14c3975_1000
   - libwebp-base=1.1.0=h516909a_3
@@ -122,9 +131,10 @@ dependencies:
   - nbconvert=5.6.1=py38h32f6830_1
   - nbformat=5.0.7=py_0
   - ncurses=6.2=he1b5a44_1
+  - networkx=2.4=py_1
   - notebook=6.0.3=py38h32f6830_1
   - numpy=1.19.1=py38h8854b6b_0
-  - openssl=1.1.1g=h516909a_0
+  - openssl=1.1.1g=h516909a_1
   - packaging=20.4=pyh9f0ad1d_0
   - pandas=1.0.5=py38hcb8c335_0
   - pandoc=2.10.1=h516909a_0
@@ -135,7 +145,7 @@ dependencies:
   - pexpect=4.8.0=py38h32f6830_1
   - phantomjs=2.1.1=1
   - pickleshare=0.7.5=py38h32f6830_1001
-  - pip=20.1.1=py_1
+  - pip=20.2=py_0
   - pixman=0.38.0=h516909a_1003
   - prometheus_client=0.8.0=pyh9f0ad1d_0
   - prompt-toolkit=3.0.5=py_1
@@ -159,14 +169,16 @@ dependencies:
   - r-backports=1.1.8=r36hcdcec82_0
   - r-base=3.6.3=h316533a_2
   - r-base64enc=0.1_3=r36hcdcec82_1004
+  - r-benchmarkme=1.0.4=r36h6115d3f_0
+  - r-benchmarkmedata=1.0.4=r36h6115d3f_1
   - r-bh=1.72.0_3=r36h6115d3f_1
   - r-biocmanager=1.30.10=r36h6115d3f_1
-  - r-bit=1.1_15.2=r36hcdcec82_1
-  - r-bit64=0.9_7.1=r36hcdcec82_0
+  - r-bit=4.0.3=r36hcdcec82_0
+  - r-bit64=4.0.2=r36hcdcec82_0
   - r-bitops=1.0_6=r36hcdcec82_1004
   - r-blob=1.2.1=r36h6115d3f_1
   - r-boot=1.3_25=r36h6115d3f_1
-  - r-brew=1.0_6=r36h6115d3f_4
+  - r-brew=1.0_6=r36h6115d3f_1003
   - r-broom=0.7.0=r36h6115d3f_0
   - r-callr=3.4.3=r36h6115d3f_1
   - r-car=3.0_8=r36h6115d3f_0
@@ -178,11 +190,10 @@ dependencies:
   - r-class=7.3_17=r36hcdcec82_1
   - r-cli=2.0.2=r36h6115d3f_1
   - r-clipr=0.7.0=r36h6115d3f_1
-  - r-clisymbols=1.2.0=r36h6115d3f_0
   - r-clue=0.3_57=r36h516909a_2
   - r-cluster=2.1.0=r36h9bbef5b_3
   - r-codetools=0.2_16=r36h6115d3f_1002
-  - r-collections=0.3.3=r36hcdcec82_0
+  - r-collections=0.3.4=r36hcdcec82_0
   - r-colorspace=1.4_1=r36hcdcec82_2
   - r-commonmark=1.7=r36hcdcec82_1002
   - r-corrplot=0.84=r36_1003
@@ -222,8 +233,8 @@ dependencies:
   - r-ggsci=2.9=r36h6115d3f_1003
   - r-ggsignif=0.6.0=r36h6115d3f_1
   - r-ggthemes=4.2.0=r36h6115d3f_2
-  - r-gh=1.0.1=r36h6115d3f_0
-  - r-git2r=0.25.2=r36h96ca727_0
+  - r-gh=1.1.0=r36h6115d3f_1
+  - r-git2r=0.27.1=r36h7253d3a_0
   - r-glmnet=4.0_2=r36h9bbef5b_0
   - r-globaloptions=0.1.2=r36_0
   - r-glue=1.4.1=r36hcdcec82_0
@@ -242,7 +253,7 @@ dependencies:
   - r-httr=1.4.2=r36h6115d3f_0
   - r-hwriter=1.3.2=r36h6115d3f_1003
   - r-igraph=1.2.5=r36hd626d4e_1
-  - r-ini=0.3.1=r36h6115d3f_0
+  - r-ini=0.3.1=r36h6115d3f_1003
   - r-ipred=0.9_9=r36hcdcec82_2
   - r-irdisplay=0.7=r36_1002
   - r-irkernel=0.8.15=r36_0
@@ -294,6 +305,7 @@ dependencies:
   - r-openxlsx=4.1.5=r36h0357c0b_0
   - r-pbdzmq=0.3_3=r36h559a7a4_1003
   - r-pbkrtest=0.4_8.6=r36h6115d3f_0
+  - r-pheatmap=1.0.12=r36h6115d3f_2
   - r-pillar=1.4.6=r36h6115d3f_0
   - r-pkgbuild=1.1.0=r36h6115d3f_0
   - r-pkgconfig=2.0.3=r36h6115d3f_1
@@ -309,6 +321,7 @@ dependencies:
   - r-prodlim=2019.11.13=r36h0357c0b_1
   - r-progress=1.2.2=r36h6115d3f_2
   - r-promises=1.1.1=r36h0357c0b_0
+  - r-pryr=0.1.4=r36h0357c0b_1004
   - r-ps=1.3.3=r36hcdcec82_0
   - r-purrr=0.3.4=r36hcdcec82_1
   - r-quantmod=0.4.17=r36h6115d3f_1
@@ -321,7 +334,7 @@ dependencies:
   - r-randomforest=4.6_14=r36h9bbef5b_1003
   - r-rappdirs=0.3.1=r36hcdcec82_1004
   - r-rbokeh=0.6.3=r36_0
-  - r-rcmdcheck=1.3.2=r36h6115d3f_0
+  - r-rcmdcheck=1.3.3=r36h6115d3f_3
   - r-rcolorbrewer=1.1_2=r36h6115d3f_1003
   - r-rcpp=1.0.5=r36h0357c0b_0
   - r-rcpparmadillo=0.9.900.2.0=r36h51c796c_0
@@ -337,6 +350,7 @@ dependencies:
   - r-repr=1.1.0=r36h6115d3f_1
   - r-reprex=0.3.0=r36h6115d3f_2
   - r-reshape2=1.4.4=r36h0357c0b_1
+  - r-reticulate=1.16=r36h0357c0b_0
   - r-rex=1.2.0=r36h6115d3f_1
   - r-rio=0.5.16=r36h6115d3f_1002
   - r-rjson=0.2.20=r36h0357c0b_1002
@@ -345,13 +359,14 @@ dependencies:
   - r-roxygen2=6.1.1=r36h29659fb_0
   - r-rpart=4.1_15=r36hcdcec82_2
   - r-rprojroot=1.3_2=r36h6115d3f_1003
+  - r-rspectra=0.16_0=r36h51c796c_3
   - r-rsqlite=2.2.0=r36h0357c0b_2
   - r-rstatix=0.6.0=r36h6115d3f_0
   - r-rstudioapi=0.11=r36h6115d3f_1
-  - r-rvest=0.3.5=r36h6115d3f_1
+  - r-rvest=0.3.6=r36h6115d3f_0
   - r-scales=1.1.1=r36h6115d3f_0
   - r-selectr=0.4_2=r36h6115d3f_1
-  - r-sessioninfo=1.1.1=r36h6115d3f_0
+  - r-sessioninfo=1.1.1=r36h6115d3f_1002
   - r-shape=1.4.4=r36_1003
   - r-shiny=1.5.0=r36h6115d3f_0
   - r-snow=0.4_3=r36h6115d3f_1002
@@ -366,7 +381,7 @@ dependencies:
   - r-stringr=1.4.0=r36h6115d3f_2
   - r-styler=1.3.2=r36h6115d3f_1
   - r-survival=3.2_3=r36hcdcec82_0
-  - r-survminer=0.4.7=r36h6115d3f_0
+  - r-survminer=0.4.8=r36h6115d3f_0
   - r-survmisc=0.5.5=r36h6115d3f_1003
   - r-sys=3.4=r36hcdcec82_0
   - r-testthat=2.3.2=r36h0357c0b_1
@@ -377,7 +392,8 @@ dependencies:
   - r-timedate=3043.102=r36h6115d3f_1002
   - r-tinytex=0.25=r36h6115d3f_0
   - r-ttr=0.23_6=r36hcdcec82_1
-  - r-usethis=1.5.0=r36h6115d3f_0
+  - r-umap=0.2.6.0=r36h0357c0b_0
+  - r-usethis=1.6.1=r36h6115d3f_1
   - r-utf8=1.1.4=r36hcdcec82_1003
   - r-uuid=0.1_4=r36hcdcec82_1
   - r-vctrs=0.3.2=r36hcdcec82_0
@@ -390,7 +406,7 @@ dependencies:
   - r-xml=3.99_0.3=r36hcdcec82_1
   - r-xml2=1.3.2=r36h0357c0b_1
   - r-xmlparsedata=1.0.3=r36h6115d3f_1
-  - r-xopen=1.0.0=r36h6115d3f_0
+  - r-xopen=1.0.0=r36h6115d3f_1003
   - r-xtable=1.8_4=r36h6115d3f_3
   - r-xts=0.12_0=r36hcdcec82_1
   - r-yaml=2.2.1=r36hcdcec82_1
@@ -403,6 +419,7 @@ dependencies:
   - send2trash=1.5.0=py_0
   - setuptools=49.2.0=py38h32f6830_0
   - six=1.15.0=pyh9f0ad1d_0
+  - spectra=0.0.11=py_1
   - sqlite=3.32.3=hcee41ef_1
   - terminado=0.8.3=py38h32f6830_1
   - testpath=0.4.4=py_0
@@ -411,7 +428,7 @@ dependencies:
   - tornado=6.0.4=py38h1e0a361_1
   - traitlets=4.3.3=py38h32f6830_1
   - urllib3=1.25.10=py_0
-  - wcwidth=0.2.5=pyh9f0ad1d_0
+  - wcwidth=0.2.5=pyh9f0ad1d_1
   - webencodings=0.5.1=py_1
   - wheel=0.34.2=py_1
   - xorg-kbproto=1.0.7=h14c3975_1002
@@ -429,5 +446,5 @@ dependencies:
   - zeromq=4.3.2=he1b5a44_2
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h516909a_1006
-  - zstd=1.4.5=h6597ccf_1
+  - zstd=1.4.5=h6597ccf_2
 
