--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=0_gnu
   - _r-mutex=1.0.1=anacondar_1
+  - astroid=2.4.2=py38h32f6830_0
   - attrs=19.3.0=py_0
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
@@ -17,6 +18,7 @@ dependencies:
   - bioconductor-all=1.28.0=r36_0
   - bioconductor-annotate=1.64.0=r36_0
   - bioconductor-annotationdbi=1.48.0=r36_0
+  - bioconductor-annotationfilter=1.10.0=r36_0
   - bioconductor-aroma.light=3.16.0=r36_0
   - bioconductor-biobase=2.46.0=r36h516909a_0
   - bioconductor-biocfilecache=1.10.0=r36_0
@@ -31,6 +33,8 @@ dependencies:
   - bioconductor-deseq2=1.26.0=r36he1b5a44_0
   - bioconductor-edaseq=2.20.0=r36_0
   - bioconductor-edger=3.28.0=r36hc6cf775_1
+  - bioconductor-ensdb.hsapiens.v86=2.99.0=r36_3
+  - bioconductor-ensembldb=2.10.0=r36_0
   - bioconductor-genefilter=1.68.0=r36hc99cbb1_0
   - bioconductor-geneplotter=1.64.0=r36_0
   - bioconductor-genomeinfodb=1.22.0=r36_0
@@ -41,6 +45,7 @@ dependencies:
   - bioconductor-hdf5array=1.14.0=r36h516909a_0
   - bioconductor-iranges=2.20.0=r36h516909a_0
   - bioconductor-limma=3.42.0=r36h516909a_0
+  - bioconductor-protgenerics=1.18.0=r36_0
   - bioconductor-rhdf5=2.30.0=r36he1b5a44_0
   - bioconductor-rhdf5lib=1.8.0=r36h516909a_0
   - bioconductor-rhtslib=1.18.0=r36hdb70ac9_1
@@ -91,6 +96,7 @@ dependencies:
   - ipykernel=5.3.4=py38h23f93f0_0
   - ipython=7.16.1=py38h23f93f0_0
   - ipython_genutils=0.2.0=py_1
+  - isort=4.3.21=py38h32f6830_1
   - jedi=0.17.2=py38h32f6830_0
   - jinja2=2.11.2=pyh9f0ad1d_0
   - jpeg=9d=h516909a_0
@@ -101,6 +107,7 @@ dependencies:
   - jupyterlab=2.2.0=py_0
   - jupyterlab_server=1.2.0=py_0
   - krb5=1.17.1=hfafb76e_2
+  - lazy-object-proxy=1.4.3=py38h1e0a361_2
   - ld_impl_linux-64=2.34=h53a641e_7
   - libblas=3.8.0=17_openblas
   - libcblas=3.8.0=17_openblas
@@ -127,6 +134,7 @@ dependencies:
   - lz4-c=1.9.2=he1b5a44_1
   - make=4.3=h516909a_0
   - markupsafe=1.1.1=py38h1e0a361_1
+  - mccabe=0.6.1=py_1
   - mistune=0.8.4=py38h1e0a361_1001
   - nbconvert=5.6.1=py38h32f6830_1
   - nbformat=5.0.7=py_0
@@ -153,6 +161,7 @@ dependencies:
   - ptyprocess=0.6.0=py_1001
   - pycparser=2.20=pyh9f0ad1d_2
   - pygments=2.6.1=py_0
+  - pylint=2.5.3=py38h32f6830_0
   - pyopenssl=19.1.0=py_1
   - pyparsing=2.4.7=pyh9f0ad1d_0
   - pyrsistent=0.16.0=py38h1e0a361_0
@@ -425,12 +434,14 @@ dependencies:
   - testpath=0.4.4=py_0
   - tk=8.6.10=hed695b0_0
   - tktable=2.10=h555a92e_3
+  - toml=0.10.1=pyh9f0ad1d_0
   - tornado=6.0.4=py38h1e0a361_1
   - traitlets=4.3.3=py38h32f6830_1
   - urllib3=1.25.10=py_0
   - wcwidth=0.2.5=pyh9f0ad1d_1
   - webencodings=0.5.1=py_1
   - wheel=0.34.2=py_1
+  - wrapt=1.11.2=py38h1e0a361_0
   - xorg-kbproto=1.0.7=h14c3975_1002
   - xorg-libice=1.0.10=h516909a_0
   - xorg-libsm=1.2.3=h84519dc_1000
