--- a/environment.yml
+++ b/environment.yml
@@ -59,24 +59,34 @@ dependencies:
   - bioconductor-xvector=0.26.0=r36h516909a_0
   - bioconductor-zlibbioc=1.32.0=r36h516909a_0
   - bleach=3.1.5=pyh9f0ad1d_0
+  - bokeh=2.2.1=py38h32f6830_0
   - brotlipy=0.7.0=py38h1e0a361_1000
   - bwidget=1.9.14=0
   - bzip2=1.0.8=h516909a_2
   - c-ares=1.16.1=h516909a_0
-  - ca-certificates=2020.6.20=hecda079_0
+  - ca-certificates=2020.11.8=ha878542_0
   - cairo=1.16.0=hcf35c78_1003
-  - certifi=2020.6.20=py38h32f6830_0
+  - certifi=2020.11.8=py38h578d9bd_0
   - cffi=1.14.1=py38h5bae8af_0
   - chardet=3.0.4=py38h32f6830_1006
+  - click=7.1.2=pyh9f0ad1d_0
+  - cloudpickle=1.6.0=py_0
   - colormath=3.0.0=py_2
   - cryptography=3.0=py38h766eaa4_0
   - curl=7.71.1=he644dc0_4
+  - cycler=0.10.0=py_2
+  - cytoolz=0.10.1=py38h516909a_0
+  - dask=2.25.0=py_0
+  - dask-core=2.25.0=py_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
+  - distributed=2.25.0=py38h32f6830_0
   - entrypoints=0.3=py38h32f6830_1001
+  - expat=2.2.9=he1b5a44_2
   - fontconfig=2.13.1=h86ecdb6_1001
   - freetype=2.10.2=he06d7ca_0
   - fribidi=1.0.10=h516909a_0
+  - fsspec=0.8.0=py_0
   - gcc_impl_linux-64=7.5.0=hd420e75_6
   - gcc_linux-64=7.5.0=h09487f9_20
   - gettext=0.19.8.1=hc5be6a0_1002
@@ -89,6 +99,7 @@ dependencies:
   - gxx_impl_linux-64=7.5.0=hdf63c60_6
   - gxx_linux-64=7.5.0=h09487f9_20
   - harfbuzz=2.4.0=h9f30f68_3
+  - heapdict=1.0.1=py_0
   - icu=64.2=he1b5a44_1
   - idna=2.10=pyh9f0ad1d_0
   - importlib-metadata=1.7.0=py38h32f6830_0
@@ -99,6 +110,7 @@ dependencies:
   - isort=4.3.21=py38h32f6830_1
   - jedi=0.17.2=py38h32f6830_0
   - jinja2=2.11.2=pyh9f0ad1d_0
+  - joblib=0.16.0=py_0
   - jpeg=9d=h516909a_0
   - json5=0.9.4=pyh9f0ad1d_0
   - jsonschema=3.2.0=py38h32f6830_1
@@ -106,8 +118,10 @@ dependencies:
   - jupyter_core=4.6.3=py38h32f6830_1
   - jupyterlab=2.2.0=py_0
   - jupyterlab_server=1.2.0=py_0
+  - kiwisolver=1.2.0=py38hbf85e49_0
   - krb5=1.17.1=hfafb76e_2
   - lazy-object-proxy=1.4.3=py38h1e0a361_2
+  - lcms2=2.11=hbd6801e_0
   - ld_impl_linux-64=2.34=h53a641e_7
   - libblas=3.8.0=17_openblas
   - libcblas=3.8.0=17_openblas
@@ -117,6 +131,7 @@ dependencies:
   - libffi=3.2.1=he1b5a44_1007
   - libgcc-ng=9.3.0=h24d8f2e_11
   - libgfortran-ng=7.5.0=hdf63c60_11
+  - libglu=9.0.0=he1b5a44_1001
   - libgomp=9.3.0=h24d8f2e_11
   - libiconv=1.15=h516909a_1006
   - liblapack=3.8.0=17_openblas
@@ -131,34 +146,43 @@ dependencies:
   - libwebp-base=1.1.0=h516909a_3
   - libxcb=1.13=h14c3975_1002
   - libxml2=2.9.10=hee79883_0
+  - locket=0.2.0=py_2
   - lz4-c=1.9.2=he1b5a44_1
   - make=4.3=h516909a_0
   - markupsafe=1.1.1=py38h1e0a361_1
+  - matplotlib-base=3.3.1=py38h91b0d89_1
   - mccabe=0.6.1=py_1
   - mistune=0.8.4=py38h1e0a361_1001
+  - msgpack-python=1.0.0=py38hbf85e49_1
   - nbconvert=5.6.1=py38h32f6830_1
   - nbformat=5.0.7=py_0
   - ncurses=6.2=he1b5a44_1
   - networkx=2.4=py_1
   - notebook=6.0.3=py38h32f6830_1
   - numpy=1.19.1=py38h8854b6b_0
-  - openssl=1.1.1g=h516909a_1
+  - olefile=0.46=py_0
+  - openssl=1.1.1h=h516909a_0
   - packaging=20.4=pyh9f0ad1d_0
   - pandas=1.0.5=py38hcb8c335_0
   - pandoc=2.10.1=h516909a_0
   - pandocfilters=1.4.2=py_1
   - pango=1.42.4=h7062337_4
   - parso=0.7.1=pyh9f0ad1d_0
+  - partd=1.1.0=py_0
+  - patsy=0.5.1=py_0
   - pcre=8.44=he1b5a44_0
   - pexpect=4.8.0=py38h32f6830_1
   - phantomjs=2.1.1=1
   - pickleshare=0.7.5=py38h32f6830_1001
+  - pillow=7.2.0=py38h9776b28_1
   - pip=20.2=py_0
   - pixman=0.38.0=h516909a_1003
   - prometheus_client=0.8.0=pyh9f0ad1d_0
   - prompt-toolkit=3.0.5=py_1
+  - psutil=5.7.2=py38h1e0a361_0
   - pthread-stubs=0.4=h14c3975_1001
   - ptyprocess=0.6.0=py_1001
+  - pyaml=20.4.0=pyh9f0ad1d_0
   - pycparser=2.20=pyh9f0ad1d_2
   - pygments=2.6.1=py_0
   - pylint=2.5.3=py38h32f6830_0
@@ -170,6 +194,7 @@ dependencies:
   - python-dateutil=2.8.1=py_0
   - python_abi=3.8=1_cp38
   - pytz=2020.1=pyh9f0ad1d_0
+  - pyyaml=5.3.1=py38h1e0a361_0
   - pyzmq=19.0.1=py38ha71036d_0
   - r-abind=1.4_5=r36h6115d3f_1003
   - r-acepack=1.4.1=r36h9bbef5b_1005
@@ -205,9 +230,11 @@ dependencies:
   - r-collections=0.3.4=r36hcdcec82_0
   - r-colorspace=1.4_1=r36hcdcec82_2
   - r-commonmark=1.7=r36hcdcec82_1002
+  - r-corpcor=1.6.9=r36h6115d3f_1003
   - r-corrplot=0.84=r36_1003
   - r-cowplot=1.0.0=r36h6115d3f_2
   - r-crayon=1.3.4=r36h6115d3f_1003
+  - r-crosstalk=1.1.0.1=r36h6115d3f_1
   - r-curl=4.3=r36hcdcec82_1
   - r-cyclocomp=1.1.0=r36h6115d3f_1004
   - r-data.table=1.12.8=r36hcdcec82_1
@@ -219,6 +246,7 @@ dependencies:
   - r-doparallel=1.0.15=r36h6115d3f_1
   - r-downloader=0.4=r36h6115d3f_1003
   - r-dplyr=1.0.0=r36h0357c0b_0
+  - r-ellipse=0.4.2=r36h6115d3f_0
   - r-ellipsis=0.3.1=r36hcdcec82_0
   - r-essentials=3.6.0=r36_0
   - r-evaluate=0.14=r36h6115d3f_2
@@ -249,7 +277,8 @@ dependencies:
   - r-glue=1.4.1=r36hcdcec82_0
   - r-gower=0.2.2=r36hcdcec82_0
   - r-gridextra=2.3=r36h6115d3f_1003
-  - r-gtable=0.3.0=r36h6115d3f_3
+  - r-gt=0.2.2=r36h6115d3f_0
+  - r-gtable=0.3.0=r36h6115d3f_0
   - r-haven=2.3.1=r36hde08347_0
   - r-hexbin=1.28.1=r36h9bbef5b_1
   - r-highr=0.8=r36h6115d3f_2
@@ -288,6 +317,7 @@ dependencies:
   - r-locfit=1.5_9.4=r36hcdcec82_1
   - r-lubridate=1.7.9=r36h0357c0b_0
   - r-magrittr=1.5=r36h6115d3f_1003
+  - r-manipulatewidget=0.10.1=r36h6115d3f_1
   - r-maps=3.3.0=r36hcdcec82_1004
   - r-maptools=1.0_1=r36hcdcec82_0
   - r-markdown=1.1=r36hcdcec82_1
@@ -300,7 +330,9 @@ dependencies:
   - r-memoise=1.1.0=r36h6115d3f_1004
   - r-mgcv=1.8_31=r36h7fa42b6_1
   - r-mime=0.9=r36hcdcec82_1
+  - r-miniui=0.1.1.1=r36h6115d3f_1002
   - r-minqa=1.2.4=r36h6786f55_1005
+  - r-mixomics=6.3.2=r36h6115d3f_4
   - r-modelmetrics=1.2.2.2=r36h0357c0b_1
   - r-modelr=0.1.8=r36h6115d3f_0
   - r-munsell=0.5.0=r36h6115d3f_1003
@@ -342,6 +374,7 @@ dependencies:
   - r-r6=2.4.1=r36h6115d3f_1
   - r-randomforest=4.6_14=r36h9bbef5b_1003
   - r-rappdirs=0.3.1=r36hcdcec82_1004
+  - r-rarpack=0.11_0=r36_1003
   - r-rbokeh=0.6.3=r36_0
   - r-rcmdcheck=1.3.3=r36h6115d3f_3
   - r-rcolorbrewer=1.1_2=r36h6115d3f_1003
@@ -361,6 +394,7 @@ dependencies:
   - r-reshape2=1.4.4=r36h0357c0b_1
   - r-reticulate=1.16=r36h0357c0b_0
   - r-rex=1.2.0=r36h6115d3f_1
+  - r-rgl=0.100.54=r36ha687ee4_1
   - r-rio=0.5.16=r36h6115d3f_1002
   - r-rjson=0.2.20=r36h0357c0b_1002
   - r-rlang=0.4.7=r36hcdcec82_0
@@ -373,6 +407,7 @@ dependencies:
   - r-rstatix=0.6.0=r36h6115d3f_0
   - r-rstudioapi=0.11=r36h6115d3f_1
   - r-rvest=0.3.6=r36h6115d3f_0
+  - r-sass=0.2.0=r36h0357c0b_1
   - r-scales=1.1.1=r36h6115d3f_0
   - r-selectr=0.4_2=r36h6115d3f_1
   - r-sessioninfo=1.1.1=r36h6115d3f_1002
@@ -424,19 +459,30 @@ dependencies:
   - r-zoo=1.8_8=r36hcdcec82_0
   - readline=8.0=he28a2e2_2
   - requests=2.24.0=pyh9f0ad1d_0
+  - scikit-learn=0.23.2=py38hee58b96_0
+  - scikit-optimize=0.8.1=pyh9f0ad1d_0
+  - scipy=1.5.2=py38h8c5af15_0
+  - seaborn=0.11.0=0
+  - seaborn-base=0.11.0=py_0
   - sed=4.8=hbfbb72e_0
   - send2trash=1.5.0=py_0
   - setuptools=49.2.0=py38h32f6830_0
   - six=1.15.0=pyh9f0ad1d_0
+  - sortedcontainers=2.2.2=pyh9f0ad1d_0
   - spectra=0.0.11=py_1
   - sqlite=3.32.3=hcee41ef_1
+  - statsmodels=0.12.0=py38h1e0a361_0
+  - tblib=1.6.0=py_0
   - terminado=0.8.3=py38h32f6830_1
   - testpath=0.4.4=py_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=hed695b0_0
   - tktable=2.10=h555a92e_3
   - toml=0.10.1=pyh9f0ad1d_0
+  - toolz=0.10.0=py_0
   - tornado=6.0.4=py38h1e0a361_1
   - traitlets=4.3.3=py38h32f6830_1
+  - typing_extensions=3.7.4.2=py_0
   - urllib3=1.25.10=py_0
   - wcwidth=0.2.5=pyh9f0ad1d_1
   - webencodings=0.5.1=py_1
@@ -454,7 +500,9 @@ dependencies:
   - xorg-xextproto=7.3.0=h14c3975_1002
   - xorg-xproto=7.0.31=h14c3975_1007
   - xz=5.2.5=h516909a_1
+  - yaml=0.2.5=h516909a_0
   - zeromq=4.3.2=he1b5a44_2
+  - zict=2.0.0=py_0
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h516909a_1006
   - zstd=1.4.5=h6597ccf_2
