--- a/environment.yml
+++ b/environment.yml
@@ -26,15 +26,20 @@ dependencies:
   - bioconductor-biocparallel=1.20.0=r36he1b5a44_0
   - bioconductor-biomart=2.42.0=r36_0
   - bioconductor-biostrings=2.54.0=r36h516909a_0
+  - bioconductor-clusterprofiler=3.14.0=r36_0
   - bioconductor-complexheatmap=2.2.0=r36_0
   - bioconductor-consensusclusterplus=1.50.0=r36_1
   - bioconductor-delayedarray=0.12.0=r36h516909a_0
   - bioconductor-deseq=1.38.0=r36h516909a_0
   - bioconductor-deseq2=1.26.0=r36he1b5a44_0
+  - bioconductor-do.db=2.9=r36_7
+  - bioconductor-dose=3.12.0=r36_0
   - bioconductor-edaseq=2.20.0=r36_0
   - bioconductor-edger=3.28.0=r36hc6cf775_1
+  - bioconductor-enrichplot=1.6.0=r36_0
   - bioconductor-ensdb.hsapiens.v86=2.99.0=r36_3
   - bioconductor-ensembldb=2.10.0=r36_0
+  - bioconductor-fgsea=1.12.0=r36he1b5a44_0
   - bioconductor-genefilter=1.68.0=r36hc99cbb1_0
   - bioconductor-geneplotter=1.64.0=r36_0
   - bioconductor-genomeinfodb=1.22.0=r36_0
@@ -43,12 +48,15 @@ dependencies:
   - bioconductor-genomicfeatures=1.38.0=r36_0
   - bioconductor-genomicranges=1.38.0=r36h516909a_0
   - bioconductor-go.db=3.10.0=r36_0
+  - bioconductor-gosemsim=2.12.0=r36he1b5a44_0
   - bioconductor-hdf5array=1.14.0=r36h516909a_0
   - bioconductor-impute=1.60.0=r36h6e990d7_0
   - bioconductor-iranges=2.20.0=r36h516909a_0
   - bioconductor-limma=3.42.0=r36h516909a_0
+  - bioconductor-org.hs.eg.db=3.10.0=r36_0
   - bioconductor-preprocesscore=1.48.0=r36h516909a_0
   - bioconductor-protgenerics=1.18.0=r36_0
+  - bioconductor-qvalue=2.18.0=r36_1
   - bioconductor-rhdf5=2.30.0=r36he1b5a44_0
   - bioconductor-rhdf5lib=1.8.0=r36h516909a_0
   - bioconductor-rhtslib=1.18.0=r36hdb70ac9_1
@@ -164,7 +172,7 @@ dependencies:
   - notebook=6.0.3=py38h32f6830_1
   - numpy=1.19.1=py38h8854b6b_0
   - olefile=0.46=py_0
-  - openssl=1.1.1h=h516909a_0
+  - openssl=1.1.1i=h7f98852_0
   - packaging=20.4=pyh9f0ad1d_0
   - pandas=1.0.5=py38hcb8c335_0
   - pandoc=2.10.1=h516909a_0
@@ -254,12 +262,14 @@ dependencies:
   - r-ellipse=0.4.2=r36h6115d3f_0
   - r-ellipsis=0.3.1=r36hcdcec82_0
   - r-essentials=3.6.0=r36_0
+  - r-europepmc=0.4=r36h6115d3f_0
   - r-evaluate=0.14=r36h6115d3f_2
   - r-exactranktests=0.8_31=r36hcdcec82_1
   - r-fansi=0.4.1=r36hcdcec82_1
   - r-farver=2.0.3=r36h0357c0b_1
   - r-fastcluster=1.1.25=r36hc99cbb1_1003
   - r-fastmap=1.0.1=r36h0357c0b_1
+  - r-fastmatch=1.1_0=r36hcdcec82_1005
   - r-fit.models=0.64=r36h6115d3f_0
   - r-forcats=0.5.0=r36h6115d3f_1
   - r-foreach=1.5.0=r36h6115d3f_1
@@ -271,9 +281,13 @@ dependencies:
   - r-futile.options=1.0.1=r36h6115d3f_1002
   - r-generics=0.0.2=r36h6115d3f_1003
   - r-getoptlong=1.0.2=r36h6115d3f_0
+  - r-ggforce=0.3.2=r36h0357c0b_0
   - r-ggplot2=3.3.2=r36h6115d3f_0
+  - r-ggplotify=0.0.5=r36h6115d3f_1
   - r-ggpubr=0.4.0=r36h6115d3f_0
+  - r-ggraph=2.0.4=r36he524a50_0
   - r-ggrepel=0.8.2=r36h0357c0b_1
+  - r-ggridges=0.5.2=r36h6115d3f_2
   - r-ggsci=2.9=r36h6115d3f_1003
   - r-ggsignif=0.6.0=r36h6115d3f_1
   - r-ggthemes=4.2.0=r36h6115d3f_2
@@ -283,7 +297,9 @@ dependencies:
   - r-globaloptions=0.1.2=r36_0
   - r-glue=1.4.1=r36hcdcec82_0
   - r-gower=0.2.2=r36hcdcec82_0
+  - r-graphlayouts=0.7.1=r36h1b71b39_0
   - r-gridextra=2.3=r36h6115d3f_1003
+  - r-gridgraphics=0.5_1=r36hc72bb7e_0
   - r-gt=0.2.2=r36h6115d3f_0
   - r-gtable=0.3.0=r36h6115d3f_0
   - r-haven=2.3.1=r36hde08347_0
@@ -362,6 +378,7 @@ dependencies:
   - r-plogr=0.2.0=r36h6115d3f_1003
   - r-plyr=1.8.6=r36h0357c0b_1
   - r-png=0.1_7=r36hcdcec82_1004
+  - r-polyclip=1.10_0=r36h0357c0b_2
   - r-polynom=1.4_0=r36h6115d3f_2
   - r-praise=1.0.0=r36h6115d3f_1004
   - r-prettyunits=1.1.1=r36h6115d3f_1
@@ -417,6 +434,7 @@ dependencies:
   - r-rsqlite=2.2.0=r36h0357c0b_2
   - r-rstatix=0.6.0=r36h6115d3f_0
   - r-rstudioapi=0.11=r36h6115d3f_1
+  - r-rvcheck=0.1.8=r36h6115d3f_1
   - r-rvest=0.3.6=r36h6115d3f_0
   - r-sass=0.2.0=r36h0357c0b_1
   - r-scales=1.1.1=r36h6115d3f_0
@@ -441,13 +459,17 @@ dependencies:
   - r-sys=3.4=r36hcdcec82_0
   - r-testthat=2.3.2=r36h0357c0b_1
   - r-tibble=3.0.3=r36hcdcec82_0
+  - r-tidygraph=1.2.0=r36h0357c0b_0
   - r-tidyr=1.1.0=r36h0357c0b_0
   - r-tidyselect=1.1.0=r36h6115d3f_0
   - r-tidyverse=1.3.0=r36h6115d3f_2
   - r-timedate=3043.102=r36h6115d3f_1002
   - r-tinytex=0.25=r36h6115d3f_0
+  - r-triebeard=0.3.0=r36he1b5a44_1003
   - r-ttr=0.23_6=r36hcdcec82_1
+  - r-tweenr=1.0.1=r36h0357c0b_1002
   - r-umap=0.2.6.0=r36h0357c0b_0
+  - r-urltools=1.7.3=r36h0357c0b_2
   - r-usethis=1.6.1=r36h6115d3f_1
   - r-utf8=1.1.4=r36hcdcec82_1003
   - r-uuid=0.1_4=r36hcdcec82_1
@@ -519,5 +541,3 @@ dependencies:
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h516909a_1006
   - zstd=1.4.5=h6597ccf_2
-prefix: /home/carcook/anaconda3/envs/TCGA-round1
-
