--- a/clean_environment.yml
+++ b/clean_environment.yml
@@ -29,6 +29,7 @@ dependencies:
   - chardet=4.0.0=py38h578d9bd_1
   - cryptography=3.3.1=py38h2b97feb_1
   - curl=7.71.1=he644dc0_8
+  - cycler=0.10.0=py_2
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
   - entrypoints=0.3=pyhd8ed1ab_1003
@@ -54,6 +55,7 @@ dependencies:
   - ipython_genutils=0.2.0=py_1
   - jedi=0.18.0=py38h578d9bd_2
   - jinja2=2.11.3=pyh44b312d_0
+  - joblib=1.0.1=pyhd8ed1ab_0
   - jpeg=9d=h36c2ea0_0
   - json5=0.9.5=pyh9f0ad1d_0
   - jsonschema=3.2.0=py_2
@@ -64,7 +66,9 @@ dependencies:
   - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
   - jupyterlab_server=2.2.0=pyhd8ed1ab_0
   - kernel-headers_linux-64=2.6.32=h77966d4_13
+  - kiwisolver=1.3.1=py38h1fd1430_1
   - krb5=1.17.2=h926e7f8_0
+  - lcms2=2.12=hddcbb42_0
   - ld_impl_linux-64=2.35.1=hea4e1c9_2
   - libblas=3.9.0=8_openblas
   - libcblas=3.9.0=8_openblas
@@ -95,6 +99,7 @@ dependencies:
   - lz4-c=1.9.3=h9c3ff4c_0
   - make=4.3=hd18ef5c_1
   - markupsafe=1.1.1=py38h497a2fe_3
+  - matplotlib-base=3.3.4=py38h0efea84_0
   - mistune=0.8.4=py38h497a2fe_1003
   - nbclassic=0.2.6=pyhd8ed1ab_0
   - nbclient=0.5.1=py_0
@@ -103,8 +108,11 @@ dependencies:
   - ncurses=6.2=h58526e2_4
   - nest-asyncio=1.4.3=pyhd8ed1ab_0
   - notebook=6.2.0=py38h578d9bd_0
+  - numpy=1.20.0=py38h18fd61f_0
+  - olefile=0.46=pyh9f0ad1d_1
   - openssl=1.1.1i=h7f98852_0
   - packaging=20.9=pyh44b312d_0
+  - pandas=1.2.2=py38h51da96c_0
   - pandoc=2.11.4=h7f98852_0
   - pandocfilters=1.4.2=py_1
   - pango=1.42.4=h69149e4_5
@@ -113,12 +121,14 @@ dependencies:
   - pcre2=10.36=h032f7d1_1
   - pexpect=4.8.0=pyh9f0ad1d_2
   - pickleshare=0.7.5=py_1003
+  - pillow=8.1.0=py38ha0e1e83_2
   - pip=21.0.1=pyhd8ed1ab_0
   - pixman=0.40.0=h36c2ea0_0
   - prometheus_client=0.9.0=pyhd3deb0d_0
   - prompt-toolkit=3.0.14=pyha770c72_0
   - pthread-stubs=0.4=h36c2ea0_1001
   - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pyaml=20.4.0=pyh9f0ad1d_0
   - pycparser=2.20=pyh9f0ad1d_2
   - pygments=2.7.4=pyhd8ed1ab_0
   - pyopenssl=20.0.1=pyhd8ed1ab_0
@@ -129,6 +139,7 @@ dependencies:
   - python-dateutil=2.8.1=py_0
   - python_abi=3.8=1_cp38
   - pytz=2021.1=pyhd8ed1ab_0
+  - pyyaml=5.4.1=py38h497a2fe_0
   - pyzmq=22.0.1=py38h3d7ac18_0
   - r-askpass=1.1=r40hcdcec82_2
   - r-assertthat=0.2.1=r40h6115d3f_2
@@ -294,6 +305,9 @@ dependencies:
   - r-zoo=1.8_8=r40hcdcec82_0
   - readline=8.0=he28a2e2_2
   - requests=2.25.1=pyhd3deb0d_0
+  - scikit-learn=0.24.1=py38h658cfdd_0
+  - scikit-optimize=0.8.1=pyh9f0ad1d_0
+  - scipy=1.6.0=py38hb2138dd_0
   - sed=4.8=he412f7d_0
   - send2trash=1.5.0=py_0
   - setuptools=49.6.0=py38h578d9bd_3
@@ -303,6 +317,7 @@ dependencies:
   - sysroot_linux-64=2.12=h77966d4_13
   - terminado=0.9.2=py38h578d9bd_0
   - testpath=0.4.4=py_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=h21135ba_1
   - tktable=2.10=hb7b940f_3
   - tornado=6.1=py38h497a2fe_1
@@ -324,6 +339,7 @@ dependencies:
   - xorg-xextproto=7.3.0=h7f98852_1002
   - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.5=h516909a_1
+  - yaml=0.2.5=h516909a_0
   - zeromq=4.3.4=h9c3ff4c_0
   - zipp=3.4.0=py_0
   - zlib=1.2.11=h516909a_1010
